--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -129,10 +129,22 @@
         </div>
     </div>
 </div>
+<div class="btt-button shadow-sm rounded-0 border border-black">
+    <a class="btt-link d-flex h-100">
+        <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
+    </a>
+</div>
 {% endblock %}
 
 {% block postloadjs %}
 {{ block.super }}
+
+<script type="text/javascript">
+    $(".btt-link").click(function (e) {
+        window.scroll(0, 0)
+    })
+</script>
+
 <script type="text/javascript">
     $("#sort-selector").change(function () {
         let selector = $(this);
