--- a/products/templates/products/includes/quantity_input_script.html
+++ b/products/templates/products/includes/quantity_input_script.html
@@ -1,13 +1,25 @@
 <script type="text/javascript">
+    // Disable +/- buttins outside 1-99 range
     const handleEnableDisable = itemId => {
-        var currentValue = parseInt($(`#id_qty_${itemId}`).val());
-        var minusDisabled = currentValue < 2;
-        var plusDisabled = currentValue > 98;
-        console.log(minusDisabled);
-        console.log(plusDisabled);
+        let currentValue = parseInt($(`#id_qty_${itemId}`).val());
+        let minusDisabled = currentValue < 2;
+        let plusDisabled = currentValue > 98;
         $(`#decrement-qty_${itemId}`).prop('disabled', minusDisabled);
         $(`#increment-qty_${itemId}`).prop('disabled', plusDisabled);
     }
+
+    // Ensure proper enabling/disabling of all inputs on page load
+    let allQtyInputs = $('.qty_input');
+    for (let i = 0; i < allQtyInputs.length; i++) {
+        let itemId = $(allQtyInputs[i]).data('item_id');
+        handleEnableDisable(itemId);
+    }
+
+    // Check enable/disable every time the input is changed
+    $('.qty_input').change(function () {
+        let itemId = $(this).data('item_id');
+        handleEnableDisable(itemId);
+    });
 
     // Increment quantity
     $('.increment-qty').click(function (e) {
@@ -15,7 +27,7 @@
         let closestInput = $(this).closest('.input-group').find('.qty_input')[0];
         let currentValue = parseInt($(closestInput).val());
         $(closestInput).val(currentValue + 1);
-        var itemId = $(this).data('item_id');
+        let itemId = $(this).data('item_id');
         handleEnableDisable(itemId);
     });
 
@@ -26,7 +38,6 @@
         let currentValue = parseInt($(closestInput).val());
         $(closestInput).val(currentValue - 1);
         let itemId = $(this).data('item_id');
-        console.log(`itemId: ${itemId}`)
         handleEnableDisable(itemId);
     });
 </script>
