--- a/templates/base.html
+++ b/templates/base.html
@@ -124,7 +124,12 @@
     </header>
 
     {% if messages %}
-    <div class="message-container"></div>
+    <div class="message-container">
+        {% for message in messages %}
+        {% include 'includes/toasts/toast_success.html' %}
+        {% endfor %}
+
+    </div>
     {% endif %}
 
     {% block page_header %}
@@ -134,6 +139,9 @@
     {% endblock %}
 
     {% block postloadjs %}
+    <script tpye="text/javascript">
+        $('.toast').toast('show');
+    </script>
     {% endblock %}
 
 </body>
