--- a/static/css/base.css
+++ b/static/css/base.css
@@ -103,6 +103,11 @@ a.category-badge>span.badge:hover {
     cursor: pointer;
 }
 
+input[name='q']::placeholder {
+    color: #aab7c4;
+}
+
+/* --------------------bootstrap toasts */
 .message-container {
     position: fixed;
     top: 72px;
