Add script to adjust country input text color

--- a/profiles/static/profiles/css/profile.css
+++ b/profiles/static/profiles/css/profile.css
@@ -5,3 +5,14 @@
 .profile-form-input::placeholder {
     color: #aab7c4;
 }
+
+
+#id_default_country,
+#id_default_country option:not(:first-child) {
+    color: #000;
+}
+
+/* Change first item on dropdown to gray text*/
+#id_default_country option:first-child {
+    color: #aab7c4;
+}
